# aip-rs

./: .gitignore  .gitmodules  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml  proto-drift.yml  release-plugin-binaries.yml  release-plz.yml
crates/aip/: Cargo.toml
crates/aip-codegen/: Cargo.toml
crates/aip-codegen/src/: generate.rs  grammaticalname.rs  lib.rs  methodtype.rs  strcase.rs
crates/aip-codegen/tests/: golden.rs  roundtrip.rs
crates/aip-codegen/tests/golden/einride/example/freight/v1/: freight_service.aip.rs  shipper.aip.rs  site.aip.rs
crates/aip-codegen/tests/golden/reflect/example/v1/: messages.aip.rs
crates/aip-errordomain/: Cargo.toml
crates/aip-errordomain/src/: lib.rs
crates/aip-etag/: Cargo.toml
crates/aip-etag/src/: lib.rs
crates/aip-fieldbehavior/: Cargo.toml
crates/aip-fieldbehavior/src/: lib.rs
crates/aip-fieldbehavior/tests/: transform.rs  validate.rs
crates/aip-fieldmask/: Cargo.toml
crates/aip-fieldmask/src/: lib.rs
crates/aip-fieldmask/tests/: update.rs  validate.rs
crates/aip-filtering/: Cargo.toml  build.rs
crates/aip-filtering/proto/google/api/expr/v1alpha1/: checked.proto  syntax.proto
crates/aip-filtering/src/: cel_proto.rs  checker.rs  lexer.rs  lib.rs  macros.rs  matcher.rs  parser.rs  token.rs
crates/aip-filtering/tests/: cel_proto.rs  check.rs  enum_temporal.rs  macro.rs  matcher.rs  parse.rs
crates/aip-iam/: Cargo.toml  build.rs
crates/aip-iam/proto/: VENDOR.md
crates/aip-iam/src/: authz.rs  eval.rs  lib.rs  member.rs  permission.rs  policy.rs  role.rs
crates/aip-lro/: Cargo.toml
crates/aip-lro/src/: lib.rs
crates/aip-ordering/: Cargo.toml
crates/aip-ordering/src/: lib.rs
crates/aip-ordering/tests/: order_by.rs  validate_for_message.rs
crates/aip-pagination/: Cargo.toml
crates/aip-pagination/src/: lib.rs
crates/aip-preview/: Cargo.toml
crates/aip-preview/src/: lib.rs
crates/aip-proto/: Cargo.toml  buf.gen.yaml  buf.yaml  regen.sh
crates/aip-proto/proto/: imports.proto
crates/aip-proto/src/: descriptor_set.binpb  lib.rs
crates/aip-reflect/: Cargo.toml
crates/aip-reflect/src/: lib.rs  messages.rs  requests.rs  resource_type.rs  resources.rs  validate.rs
crates/aip-reflect/tests/: messages.rs  requests.rs  resource_references.rs  resources.rs
crates/aip-requestid/: Cargo.toml
crates/aip-requestid/src/: lib.rs
crates/aip-resourceid/: Cargo.toml
crates/aip-resourceid/src/: lib.rs
crates/aip-resourcename/: Cargo.toml
crates/aip-resourcename/src/: lib.rs
crates/aip-softdelete/: Cargo.toml
crates/aip-softdelete/src/: lib.rs
crates/aip-sql/: Cargo.toml
crates/aip-sql/src/: dialect.rs  lib.rs  order.rs  predicate.rs  query.rs  schema.rs  timestamp.rs  transpile.rs
crates/aip-sql/tests/: golden.rs
crates/aip-validation/: Cargo.toml
crates/aip-validation/src/: lib.rs
crates/aip/src/: lib.rs
crates/protoc-gen-prost-aip/: Cargo.toml
crates/protoc-gen-prost-aip/src/: main.rs
crates/test-fixtures/: Cargo.toml  buf.yaml  build.rs  regen.sh
crates/test-fixtures/proto/einride/example/freight/v1/: freight_service.proto
crates/test-fixtures/proto/google/: VENDOR.md
crates/test-fixtures/src/: descriptor_set.binpb  lib.rs
crates/test-fixtures/tests/: smoke.rs
docs/adr/: 0001-prost-reflect-and-workspace.md  0002-idiomatic-resourcename-api.md  0003-native-filter-ast.md  0004-page-token-encoding.md  0005-database-agnostic-core.md  0006-example-freight-server.md  0007-aip193-error-details.md  0008-aip-sql-predicate-dialect.md  0009-reflective-typed-message-api.md  0010-iam-primitives.md  0011-buf-proto-pipeline.md  0012-aip-events-cloudevents-change-events.md  0013-request-trait-impls-by-field-shape.md  0014-softdeletable-trait-and-emission.md  0015-aip-lro-long-running-operations.md  0016-typed-key-resource-store.md
examples/freight-server/: Cargo.toml  README.md  buf.gen.yaml  buf.yaml  build.rs  regen.sh
examples/freight-server/proto/: imports.proto
examples/freight-server/proto/einride/example/freight/v1/: freight_service.proto  shipper.proto  site.proto
examples/freight-server/proto/google/: VENDOR.md
examples/freight-server/src/: descriptor_set.binpb  iam.rs  integration_tests.rs  main.rs  proto.rs  reflect.rs  service.rs  storage.rs
scripts/: buf-message-names.py
