# aip-rs — Cargo workspace.
#
# Architecture: per-feature crates re-exported by the umbrella `aip` crate.
# `prost-reflect` is a hard dependency only of the crates that reflect; the
# pure-syntax crates (`aip-resourcename`, `aip-resourceid`) stay proto-free.
# See docs/adr/0001-prost-reflect-and-workspace.md.

[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/irate-walrus/aip-rs"
authors = ["irate-walrus"]

[workspace.dependencies]
# Internal crates (version + path so they can be published independently).
aip              = { version = "0.1.0", path = "crates/aip" }
aip-resourcename = { version = "0.1.0", path = "crates/aip-resourcename" }
aip-resourceid   = { version = "0.1.0", path = "crates/aip-resourceid" }
aip-pagination   = { version = "0.1.0", path = "crates/aip-pagination" }
aip-fieldmask    = { version = "0.1.0", path = "crates/aip-fieldmask" }
aip-ordering     = { version = "0.1.0", path = "crates/aip-ordering" }
aip-filtering    = { version = "0.1.0", path = "crates/aip-filtering" }
# IAM primitives (ADR-0010): Member/Role/Permission parsing + Policy structure.
# Opt-in via the umbrella's `iam` feature while the slice matures.
aip-iam          = { version = "0.1.0", path = "crates/aip-iam" }
aip-fieldbehavior = { version = "0.1.0", path = "crates/aip-fieldbehavior" }
# Optional SQL adapter (ADR-0005 / ADR-0008): transpiles the filter AST to a
# parameterized, dialect-rendered Predicate. Not part of the core; depended on
# directly by the example's default SQLite storage.
aip-sql          = { version = "0.1.0", path = "crates/aip-sql" }

# Test-only fixture harness (never published); dev-dependency of the reflective
# crates. Path-only — no version, since it is unpublishable.
test-fixtures    = { path = "crates/test-fixtures" }

# Protobuf runtime + reflection (reflective crates only).
prost         = "0.14"
prost-types   = "0.14"
prost-reflect = "0.16"
# Build-time prost codegen for vendored protos, fed a `protox`-built descriptor
# set via `compile_fds` (so still no `protoc`). Used by `aip-filtering`'s
# optional `cel-proto` feature to generate the CEL `v1alpha1` types.
prost-build   = "0.14"

# Shared building blocks.
thiserror  = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
postcard   = "1"
base64     = "0.22"
crc32fast  = "1"
uuid       = { version = "1", features = ["v4"] }

# Test-only: build-time .proto compiler (pure Rust, no `protoc`). Used by the
# `test-fixtures` support crate to compile the vendored example protos.
protox = "0.9"

# Optional gRPC status mapping (behind each crate's `tonic` feature).
tonic = { version = "0.14", default-features = false }
# AIP-193 standard error details (BadRequest / ErrorInfo) packed into a mapped
# `tonic::Status`. Pulled in alongside `tonic` by each crate's `tonic` feature.
tonic-types = { version = "0.14", default-features = false }

# Example gRPC server only (`examples/freight-server`) — never used by the core
# crates. `tonic-prost` supplies the runtime Prost codec the generated service
# uses; `tonic-prost-build` is the build-time codegen (fed a protox-built
# descriptor set, so still no `protoc`). See examples/freight-server.
tonic-prost       = "0.14"
tonic-prost-build = "0.14"
tokio             = { version = "1", features = ["rt-multi-thread", "macros"] }
# Real SQLite engine for the example's default Site storage, proving an AIP filter
# travels end-to-end into a database (ADR-0008). `bundled` compiles a vendored
# SQLite, so no system library is required (a C toolchain is). Example-only.
rusqlite          = { version = "0.37", features = ["bundled"] }
