[package]
name = "aip-filtering"
description = "AIP-160 filter parsing and type-checking into a native AST"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
prost-reflect.workspace = true
# `cel-proto` enables conversion to/from google.api.expr.v1alpha1 CEL protos.
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tonic-types = { workspace = true, optional = true }

[features]
cel-proto = ["dep:prost", "dep:prost-types"]
# Adds `From<Error> for tonic::Status` (INVALID_ARGUMENT) with AIP-193 standard
# error details (ErrorInfo + BadRequest). See docs/adr/0007-aip193-error-details.md.
tonic = ["dep:tonic", "dep:tonic-types"]

[build-dependencies]
# Generate the vendored CEL `v1alpha1` protos for the `cel-proto` feature. The
# build script only invokes these when `CARGO_FEATURE_CEL_PROTO` is set, so a
# default build does no proto codegen (it still compiles these build-deps).
# `protox` compiles the `.proto` into a descriptor set (no `protoc`, ADR-0001);
# `prost-build` turns that set into Rust via `compile_fds`.
protox.workspace = true
prost-build.workspace = true

[dev-dependencies]
# Shared DescriptorPool + JSON -> DynamicMessage fixtures for reflective tests.
test-fixtures.workspace = true
