[package]
name = "aip-filtering"
description = "AIP-160 filter parsing and type-checking into a native AST"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
prost-reflect.workspace = true
# The reflective matcher transcodes a Typed message to a `DynamicMessage` through
# its wire bytes (ADR-0009) via prost's `Message` encode/decode, so `prost` is a
# hard dependency — not only the optional `cel-proto` path. `prost-reflect`
# re-exports it transitively, but we pin it directly so the transcode does not
# rest on that re-export.
prost.workspace = true
# `cel-proto` enables conversion to/from google.api.expr.v1alpha1 CEL protos.
# The types come from `aip-proto` (ADR-0011) rather than a crate-local build.rs.
aip-proto = { workspace = true, features = ["cel"], optional = true }
tonic = { workspace = true, optional = true }
tonic-types = { workspace = true, optional = true }

[features]
cel-proto = ["dep:aip-proto"]
# Adds `From<Error> for tonic::Status` (INVALID_ARGUMENT) with AIP-193 standard
# error details (ErrorInfo + BadRequest). See docs/adr/0007-aip193-error-details.md.
tonic = ["dep:tonic", "dep:tonic-types"]

[dev-dependencies]
# Shared DescriptorPool + JSON -> DynamicMessage fixtures for reflective tests.
test-fixtures.workspace = true
