[package]
name = "aip-ordering"
description = "AIP-132 order_by parsing and validation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
prost-reflect.workspace = true
# Used by `validate_for_message` to validate field paths against a descriptor.
aip-fieldmask.workspace = true
tonic = { workspace = true, optional = true }

[features]
tonic = ["dep:tonic"]

[dev-dependencies]
# Shared DescriptorPool + JSON -> DynamicMessage fixtures for reflective tests.
test-fixtures.workspace = true
