[package]
name = "aip-ordering"
description = "AIP-132 order_by parsing and validation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror.workspace = true
prost-reflect.workspace = true
# `validate_for_message` builds a `FieldMask` from the ordering paths and hands it
# to `aip-fieldmask` for descriptor-based path validation.
prost-types.workspace = true
aip-fieldmask.workspace = true
tonic = { workspace = true, optional = true }
tonic-types = { workspace = true, optional = true }

[features]
# Adds `From<Error> for tonic::Status` (INVALID_ARGUMENT) with AIP-193 standard
# error details (ErrorInfo + BadRequest). See docs/adr/0007-aip193-error-details.md.
tonic = ["dep:tonic", "dep:tonic-types"]

[dev-dependencies]
# Shared DescriptorPool + JSON -> DynamicMessage fixtures for reflective tests.
test-fixtures.workspace = true
