[package]
name = "aip-pagination"
description = "AIP-158 pagination: page tokens and request checksums"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
postcard.workspace = true
base64.workspace = true
crc32fast.workspace = true
prost.workspace = true
prost-reflect.workspace = true
tonic = { workspace = true, optional = true }

[features]
tonic = ["dep:tonic"]
