[package]
name = "aip-pagination"
description = "AIP-158 pagination: page tokens and request checksums"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
# `alloc` provides `to_allocvec`, which encodes a token to an owned byte buffer.
postcard = { workspace = true, features = ["alloc"] }
base64.workspace = true
crc32fast.workspace = true
prost.workspace = true
prost-reflect.workspace = true
tonic = { workspace = true, optional = true }
tonic-types = { workspace = true, optional = true }

[features]
# Adds `From<Error> for tonic::Status` (INVALID_ARGUMENT) with AIP-193 standard
# error details (ErrorInfo + BadRequest). See docs/adr/0007-aip193-error-details.md.
tonic = ["dep:tonic", "dep:tonic-types"]

[dev-dependencies]
# Shared DescriptorPool + JSON -> DynamicMessage fixtures for reflective tests.
test-fixtures.workspace = true
