[package]
name = "aip-requestid"
description = "AIP-155 request_id validation and the idempotency contract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror.workspace = true
uuid.workspace = true
tonic = { workspace = true, optional = true }
tonic-types = { workspace = true, optional = true }

[features]
# Adds `From<Error> for tonic::Status` (INVALID_ARGUMENT) and `conflict()`
# (ALREADY_EXISTS), both with AIP-193 standard error details (ErrorInfo). See
# docs/adr/0007-aip193-error-details.md.
tonic = ["dep:tonic", "dep:tonic-types"]
