[package]
name = "aip-resourceid"
description = "AIP-122 resource ID validation and generation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
uuid.workspace = true
tonic = { workspace = true, optional = true }

[features]
tonic = ["dep:tonic"]
