[package]
name = "aip-sql"
description = "Transpile AIP-160 filters into a parameterized, dialect-rendered SQL Predicate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror.workspace = true
# The native Filter AST (ADR-0003) is the transpile input — the integration point
# ADR-0005 named. No datastore dependency: this crate only emits `(sql, binds)`.
aip-filtering.workspace = true
# The parsed AIP-132 Order by is the second transpile input (ADR-0008):
# `transpile_order_by` maps its fields onto SQL `ORDER BY` columns.
aip-ordering.workspace = true
# `format_timestamp` converts a prost Timestamp to the RFC3339 text the
# transpiler binds, so stored columns compare lexicographically with filter
# literals by construction.
prost-types.workspace = true
tonic = { workspace = true, optional = true }
tonic-types = { workspace = true, optional = true }

[features]
# Adds `From<Error> for tonic::Status` with AIP-193 standard error details
# (ErrorInfo) for the user-fault filter errors, and maps the server-fault
# `UnknownIdentifier` (Schema/allow-list drift) to `INTERNAL`. See
# docs/adr/0007-aip193-error-details.md and docs/adr/0008-aip-sql-predicate-dialect.md.
tonic = ["dep:tonic", "dep:tonic-types"]
