[package]
name = "aip"
description = "Rust SDK for Google's API Improvement Proposals (AIP)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aip-resourcename = { workspace = true, optional = true }
aip-resourceid   = { workspace = true, optional = true }
aip-pagination   = { workspace = true, optional = true }
aip-fieldmask    = { workspace = true, optional = true }
aip-ordering     = { workspace = true, optional = true }
aip-filtering     = { workspace = true, optional = true }
aip-fieldbehavior = { workspace = true, optional = true }
# Optional IAM primitives (ADR-0010): off by default while the slice matures, like
# `sql` — only `aip = { features = ["iam"] }` pulls it in as `aip::iam`.
aip-iam           = { workspace = true, optional = true }
# Optional SQL adapter (ADR-0005 / ADR-0008): not part of the core, so it stays
# off by default — only `aip = { features = ["sql"] }` pulls it in as `aip::sql`.
aip-sql           = { workspace = true, optional = true }

[features]
default = ["resourcename", "resourceid", "pagination", "fieldmask", "ordering", "filtering", "fieldbehavior"]

resourcename  = ["dep:aip-resourcename"]
resourceid    = ["dep:aip-resourceid"]
pagination    = ["dep:aip-pagination"]
fieldmask     = ["dep:aip-fieldmask"]
ordering      = ["dep:aip-ordering"]
filtering     = ["dep:aip-filtering"]
fieldbehavior = ["dep:aip-fieldbehavior"]
# Deliberately not in `default` (ADR-0010): the IAM primitives are opt-in while
# the slice matures.
iam           = ["dep:aip-iam"]
# Deliberately not in `default` (ADR-0005): the SQL adapter is opt-in.
sql           = ["dep:aip-sql"]

# Forward the optional integrations to whichever sub-crates are enabled.
tonic = [
    "aip-resourcename?/tonic",
    "aip-resourceid?/tonic",
    "aip-pagination?/tonic",
    "aip-fieldmask?/tonic",
    "aip-ordering?/tonic",
    "aip-filtering?/tonic",
    "aip-fieldbehavior?/tonic",
    "aip-iam?/tonic",
]
cel-proto = ["aip-filtering?/cel-proto"]
